@@ -1,3 +1,11 @@
+2007-02-02  Timothee Lecomte  <timothee.lecomte@ens.fr>
+
+	* configure.in:
+	* src/Makefile.am:
+	Use autotools' name transformation mechanism to define GNUPLOT_X11 as
+	the installed name for the gnuplot_x11 program. Fix the use of
+	--program-prefix and friends at configure time. Bug #997481.
+
 2007-01-31  Ethan Merritt  <merritt@u.washington.edu>
 
 	* term/gd.trm (ENHGD_FLUSH):  libgd 2.0.34 will allow explicit request
